2012-11-15  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Rebaselined pixel results.

        * platform/chromium-mac/fast/text/international/combining-marks-position-expected.txt: Added.

2012-11-15  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Marked fast/images/webgl-teximage2d.html as Slow.

        * platform/chromium/TestExpectations:

2012-11-15  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Rebaselined images.

        * platform/chromium-linux/compositing/checkerboard-expected.png:
        * platform/chromium-mac-lion/compositing/checkerboard-expected.png: Added.
        * platform/chromium-win/compositing/checkerboard-expected.png:

2012-11-15  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Marked fast/forms/validation-message-appearance.html as flaky.

        * platform/chromium/TestExpectations:

2012-11-15  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Rebaselined images.

        * fast/media/mq-js-media-except-02-expected.txt: Renamed from LayoutTests/platform/efl/fast/media/mq-js-media-except-02-expected.txt.
        * fast/media/mq-js-media-except-03-expected.txt: Renamed from LayoutTests/platform/efl/fast/media/mq-js-media-except-03-expected.txt.
        * platform/chromium-mac-lion/fast/media/mq-js-media-except-02-expected.png:
        * platform/chromium-mac-lion/fast/media/mq-js-media-except-03-expected.png:
        * platform/chromium-mac-snowleopard/fast/media/mq-js-media-except-02-expected.png:
        * platform/chromium-mac-snowleopard/fast/media/mq-js-media-except-03-expected.png:
        * platform/chromium-mac/fast/media/mq-js-media-except-02-expected.png:
        * platform/chromium-mac/fast/media/mq-js-media-except-02-expected.txt: Renamed from LayoutTests/platform/chromium/fast/media/mq-js-media-except-02-expected.txt.
        * platform/chromium-mac/fast/media/mq-js-media-except-03-expected.png: